# server/entity/requestEntity.go
@@ -42,7 +42,6 @@ type UpdateGoodsType struct {
 	GoodsSpecs       string  `json:"goods_specs" enums:"1,2,3" default:"1"` // 商品规格 1.盒 2.瓶 3.支
 	GoodsUnitPrince  float64 `json:"goods_unitprince"`                      // 商品成本价
 	GoodsPrince      float64 `json:"goods_prince"`                          // 商品销售价
-	GoodsImage       string  `json:"goods_image"`                           // 商品图片
 	GoodsBatchNumber string  `json:"goods_batch_number"`                    // 生产批号
 	GoodsDate        string  `json:"goods_date"`                            // 生产日期
 	GoodsState       string  `json:"goods_state" enums:"1,2,3" default:"2"` // 商品状态 1.下架  2.在售
